cmake make ProgParam and nana.ext target libraries

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,18 +6,11 @@ project(ThDy_DNAHybrid VERSION      0.02.00
 
 #######################     Main setting of sources, targets and install
 
-include(../ExtLib/nana/CMakeLists.txt)
+add_executable(   ThDy_DNAHybrid)
 
-
-add_executable(   ThDy_DNAHybrid
-        ../ProgParam/src/init_prog_param.cpp
-        ../ProgParam/src/ParamGUIBind.cpp
-        ../ProgParam/src/Units.cpp
-
-        ../ExtLib/nana.ext/src/CompoWidget.cpp
-        ../ExtLib/nana.ext/src/EditableForm.cpp
-        ../ExtLib/nana.ext/src/number.cpp
-
+target_include_directories(ThDy_DNAHybrid PUBLIC include)
+target_compile_features   (ThDy_DNAHybrid PUBLIC cxx_std_14)
+target_sources            (ThDy_DNAHybrid PRIVATE
         src/ThDySec/cod_deg.cpp
         src/ThDySec/sec.cpp
         src/ThDySec/sec_basic.cpp
@@ -39,17 +32,17 @@ add_executable(   ThDy_DNAHybrid
         src/ThDy_DNAHybrid.Nana/SetupPage.cpp
         src/ThDy_DNAHybrid.Nana/TableResults.cpp
         src/ThDy_DNAHybrid.Nana/TmCalcPage.cpp
-        src/ThDy_DNAHybrid.Nana/uArray.cpp
-
-        )
-
-include_directories(include)
-include_directories(../ProgParam/include)
+        src/ThDy_DNAHybrid.Nana/uArray.cpp)
 
 
-set_property( TARGET ThDy_DNAHybrid PROPERTY CXX_STANDARD 14 )
-#target_include_directories(${PROJECT_NAME} PUBLIC src)
-target_link_libraries(ThDy_DNAHybrid nana )
+include(../ExtLib/nana.ext/CMakeLists.txt)
+target_link_libraries(ThDy_DNAHybrid PRIVATE nana_ext )
+
+
 install(TARGETS ThDy_DNAHybrid RUNTIME DESTINATION "ThDy")
 
-message ( "NANA_CMAKE_ADD_DEF_AUTOMATIC_GUI_TESTING = "  ${NANA_CMAKE_ADD_DEF_AUTOMATIC_GUI_TESTING})
+include(CMakePrintHelpers)
+cmake_print_properties(TARGETS ThDy_DNAHybrid  PROPERTIES
+        COMPILE_DEFINITIONS   COMPILE_OPTIONS    COMPILE_FLAGS  LINK_LIBRARIES
+        INCLUDE_DIRECTORIES   INSTALL_NAME_DIR   LINK_FLAGS     VERSION)
+
